<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="215dp"
    android:layout_margin="8dp"
    android:background="@drawable/white_corner_bg"
    android:elevation="3dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pic"
        android:layout_width="240dp"
        android:layout_height="115dp"
        android:layout_margin="8dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverly.App.circleImageView"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/title_l"
        android:textColor="@color/darkBlue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pic"
        app:layout_constraintEnd_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/pic" />

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="@id/titleTxt"
        app:layout_constraintEnd_toEndOf="@id/pic"
        app:layout_constraintTop_toTopOf="@id/titleTxt"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/scoreTxt"
        app:layout_constraintEnd_toStartOf="@id/scoreTxt"
        app:layout_constraintTop_toTopOf="@id/scoreTxt"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/titleTxt"
        app:layout_constraintTop_toBottomOf="@id/titleTxt"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/addressTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView4"
        app:layout_constraintStart_toEndOf="@id/imageView4"
        app:layout_constraintTop_toTopOf="@id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/address" />

    <TextView
        android:id="@+id/priceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/addressTxt"/>

    <TextView
        android:id="@+id/perstionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/person"
        android:textColor="@color/darkBlue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/priceTxt"
        app:layout_constraintStart_toEndOf="@id/priceTxt"
        app:layout_constraintTop_toTopOf="@id/priceTxt"/>

</androidx.constraintlayout.widget.ConstraintLayout>