<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.DetailActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/pic"
                        android:layout_width="wrap_content"
                        android:layout_height="400dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/backBtn"
                        tools:srcCompat="@drawable/fav_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="350dp"
                    android:background="@drawable/top_corner_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/titleTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="24dp"
                            android:text="@string/title_l"
                            android:textAlignment="center"
                            android:textColor="@color/darkBlue"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/location" />

                            <TextView
                                android:id="@+id/addressTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:text="@string/address"
                                android:textColor="@color/darkBlue"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                            <RatingBar
                                android:id="@+id/ratingBar3"
                                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:indeterminate="false"
                                android:isIndicator="true"
                                android:numStars="5"
                                android:progressTint="#ffc106"
                                android:rating="3"
                                android:scaleX="0.7"
                                android:scaleY="0.7"
                                android:stepSize="0.1"
                                android:transformPivotX="0dp" />

                            <TextView
                                android:id="@+id/ratingTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/_0"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:background="@drawable/gray_bg_corner"
                            android:orientation="horizontal">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.333">

                                <TextView
                                    android:id="@+id/durationTxt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="- min"
                                    android:textColor="@color/darkBlue"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/imageView98"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/durationTxt"
                                    app:layout_constraintEnd_toStartOf="@+id/durationTxt"
                                    app:layout_constraintTop_toTopOf="@+id/durationTxt"
                                    app:srcCompat="@drawable/hourglass" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="Duration"
                                    android:textColor="@color/darkBlue"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/durationTxt" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <View
                                android:id="@+id/view2"
                                android:layout_width="1dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@color/blue" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.333">

                                <TextView
                                    android:id="@+id/distanceTxt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="0"
                                    android:textColor="@color/darkBlue"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/imageView99"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/distanceTxt"
                                    app:layout_constraintEnd_toStartOf="@+id/distanceTxt"
                                    app:layout_constraintTop_toTopOf="@+id/distanceTxt"
                                    app:srcCompat="@drawable/distance" />

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/distance"
                                    android:textColor="@color/darkBlue"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/distanceTxt" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <View
                                android:id="@+id/view3"
                                android:layout_width="1dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@color/blue" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.333">

                                <TextView
                                    android:id="@+id/bedTxt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="0"
                                    android:textColor="@color/darkBlue"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/imageView9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/bedTxt"
                                    app:layout_constraintEnd_toStartOf="@+id/bedTxt"
                                    app:layout_constraintTop_toTopOf="@+id/bedTxt"
                                    app:srcCompat="@drawable/bed" />

                                <TextView
                                    android:id="@+id/textView14"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="Bed"
                                    android:textColor="@color/darkBlue"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/bedTxt" />

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:text="Description"
                            android:textColor="@color/darkBlue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/descriptionTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing\n
elitsed do esiusmod tempor incididunt ut labore et \ndolore magna aliqua. Ut enim ad minim veniam, quis\n
nostrud exercitation ullamco laboris nisi ut aliquip\n ex ea commodo consequat. Ut enim ad minim\n veniam, quis nostrud exercitation ullamco laboris\n
nisi ut aliquip ex ea commodo consequat."
                            android:textColor="@color/darkBlue"
                            android:textSize="19sp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addToCartBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="Add to cart"
            style="@android:style/Widget.Button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/blue_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="$000"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text=" /Pesson"
            android:textColor="@color/darkBlue"
            app:layout_constraintBottom_toBottomOf="@+id/priceTxt"
            app:layout_constraintStart_toEndOf="@id/priceTxt"
            app:layout_constraintTop_toTopOf="@id/priceTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


